<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	   <TextView 
	       android:id="@+id/id_playbox_hint_1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/playbox_hint"
			    android:textColor="@color/blue"
			    android:layout_marginTop="15dip"/>
	
	<LinearLayout 
	    android:layout_below="@id/id_playbox_hint_1"
	    android:id="@+id/playbox_hint_centor"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_centerHorizontal="true"
	    android:padding="5dip"
	    android:layout_margin="15dip">
	 
	      <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/video"
			    android:textColor="@color/red"
			    android:layout_gravity="center_horizontal"
			    android:textSize="25sp"/>
	      <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/picture"
			    android:textColor="@color/red"
			    android:layout_gravity="center_horizontal"
			    android:textSize="25sp"/>
	      <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/colorblock"
			    android:textColor="@color/red"
			    android:layout_gravity="center_horizontal"
			    android:textSize="25sp"/>
	        <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/line"
			    android:textColor="@color/red"
			    android:layout_gravity="center_horizontal"
			    android:textSize="25sp"/>
	          <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/view"
			    android:textColor="@color/red"
			    android:layout_gravity="center_horizontal"
			    android:textSize="25sp"/>
	           <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/word"
			    android:textColor="@color/red"
			    android:layout_gravity="center_horizontal"
			    android:textSize="25sp"/>
	</LinearLayout>
	   <TextView 
	       android:id="@+id/id_palybox_hint_only"
	      		 android:layout_below="@id/playbox_hint_centor"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/here_is_only_demo"/>
	   <TextView
	       android:id="@+id/id_playbox_tv_count"
	       android:layout_below="@id/id_palybox_hint_only"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_centerHorizontal="true"
	       android:layout_margin="10dip"
	       android:text="10" 
	       android:textSize="20sp"/>
	     <Button 
	        android:id="@+id/id_playbox_hint_btn"
	        android:layout_below="@id/id_playbox_tv_count"
	        android:layout_width="match_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:layout_height="wrap_content"
	        android:text="开始"
	        android:background="#FFFF00"
	        android:layout_centerInParent="true"/>
</RelativeLayout>
